fixes volumes vertical align

--- a/app/assets/stylesheets/sass_folder/prices.css.scss
+++ b/app/assets/stylesheets/sass_folder/prices.css.scss
@@ -13,6 +13,7 @@
     text-align: right;
   }
   .price_filter{
+    vertical-align: top;
     display: inline-block;
     cursor: pointer;
     font-family: 'MuseoSansCyrl-700';
